Raw translation of "ToolbarRoads", "DirtRoad", "StoneRoad", "Bridge" and "Tunnel"; Fixed uppercase 'x'-multiplicator in some files

--- a/Misc/TODO.txt
+++ b/Misc/TODO.txt
@@ -38,15 +38,15 @@ Hilfe (Raw translation):
     [x] Help Hilfe
 
 [x] ToolbarHousing Behausungen und Unterkünfte
-    [ ] WoodHouse Holzhäuser
-    [ ] StoneHouse Steinhäuser
-    [ ] BoardingHouse Notunterkünfte
+    [x] WoodHouse Holzhäuser
+    [x] StoneHouse Steinhäuser
+    [x] BoardingHouse Notunterkünfte
 
-[ ] ToolbarRoads Straßen und Brücken
-    [ ] DirtRoad Feldwege
-    [ ] StoneRoad Gepflasterte Straße
-    [ ] Bridge Brücken
-    [ ] Tunnel Tunnel
+[x] ToolbarRoads Straßen und Brücken
+    [x] DirtRoad Feldwege
+    [x] StoneRoad Gepflasterte Straße
+    [x] Bridge Brücken
+    [x] Tunnel Tunnel
 
 [ ] ToolbarStorage Lagerraum und Handel
     [ ] StorageBarn Lagerhäuser
