--- a/Misc/TODO.txt
+++ b/Misc/TODO.txt
@@ -67,8 +67,8 @@ Hilfe (Raw translation):
     [x] CropField Äcker
     [x] Orchard Obstgärten
     [x] Pasture Viehweiden
-    [ ] FishingDock Fischerhütten
-    [ ] HunterLodge Jagdhütte
+    [x] FishingDock Fischerhütten
+    [x] HunterLodge Jagdhütte
     [ ] GathererHut Sammler
 
 [ ] ToolbarProduction Ressourcenproduktion
