--- a/Misc/TODO.txt
+++ b/Misc/TODO.txt
@@ -1,97 +1,84 @@
-Allgemein:
-- Citizens -> Siedler, Bevölkerung
-- Items -> Artikel, Güter
-- Punktsetzung bei Tooltips, wenn es sinnvoll aussieht
-- Anrede des Spielers: Sie
-- Untere Menüleiste -> Hauptleiste
-
 TODOs:
-TODO: "Schneiderei" ggf. umbenennen in "Schneider"
 TODO: Bilder in der Hilfe ebenfalls übersetzen
-TODO: Zu kleine Fenster (bspw. Viehweide) anpassen und vergrößern
-TODO: Rechtschreibüberprüfung mit WebStorm
-TODO: "Gebäudebau und Gebäude" klingt blöd
-TODO: "Abreißen"/"Abriss" mit "ß" oder mit "ss"?
-TODO: "Sammler" -> "Sammlerhütte"
-TODO: In Single Quotes '' gesetzte Wörter orange hervorheben, so wie es woanders auch gemacht
-TODO: Holzscheite / HolzscheiteN überprüfen
-TODO: Check: Ressourcenlimit vs. Ressourcen-Limit
 TODO: Bei manchen Hilfeseiten sind die Bilder verrutscht. Korrigieren! Eine schöne Formatierung ist auf der Seite Woodcutter
 TODO: ^ab<ID> <Value>^ae: Leerzeichen, Punkt- und Kommasetzung überprüfen
 
+Fenstergröße unpassend bei:
+- Viehweide
+
 Hilfe (Raw translation):
-[x] Contents, Übersicht
-[x] GettingStarted Grundlagen zum Spiel
-[x] Navigation Kamerasteuerung
-[x] Toolbar Hauptleiste
-[x] Citizen Siedler
-[x] Resource Ressourcen
-[x] Buildings Gebäudebau und Gebäude
-[x] Disaster Katastrophen
-[x] ToolbarTime Spielgeschwindigkeit
+[ ] Contents, Übersicht
+[ ] GettingStarted Grundlagen zum Spiel
+[ ] Navigation Kamerasteuerung
+[ ] Toolbar Hauptleiste
+[ ] Citizen Siedler
+[ ] Resource Ressourcen
+[ ] Buildings Gebäude
+[ ] Disaster Katastrophen
+[ ] ToolbarTime Spielgeschwindigkeit
 
-[x] ToolbarTools Toolfenster und Statistiken
-    [x] StatusBar Statusfenster
-    [x] EventLog Ereignisverlauf
-    [x] Map Übersichtskarte
-    [x] Profession Berufe
-    [x] Limit Ressourcenlimits
-    [x] Priority Priorität erhöhen
-    [x] Path Laufwege
-    [x] Camera Kameraansichten
-    [x] GotoTownHall Zensusdaten
-    [x] Help Hilfe
+[ ] ToolbarTools Toolfenster und Statistiken
+    [ ] StatusBar Statusfenster
+    [ ] EventLog Ereignisverlauf
+    [ ] Map Übersichtskarte
+    [ ] Profession Berufe
+    [ ] Limit Ressourcenlimits
+    [ ] Priority Priorität erhöhen
+    [ ] Path Laufwege
+    [ ] Camera Kameraansichten
+    [ ] GotoTownHall Zensusdaten
+    [ ] Help Hilfe
 
-[x] ToolbarHousing Behausungen und Unterkünfte
-    [x] WoodHouse Holzhäuser
-    [x] StoneHouse Steinhäuser
-    [x] BoardingHouse Notunterkünfte
+[ ] ToolbarHousing Behausungen und Unterkünfte
+    [ ] WoodHouse Holzhäuser
+    [ ] StoneHouse Steinhäuser
+    [ ] BoardingHouse Notunterkünfte
 
-[x] ToolbarRoads Straßen und Brücken
-    [x] DirtRoad Feldwege
-    [x] StoneRoad Gepflasterte Straße
-    [x] Bridge Brücken
-    [x] Tunnel Tunnel
+[ ] ToolbarRoads Straßen und Brücken
+    [ ] DirtRoad Feldwege
+    [ ] StoneRoad Gepflasterte Straße
+    [ ] Bridge Brücken
+    [ ] Tunnel Tunnel
 
-[x] ToolbarStorage Lagerraum und Handel
-    [x] StorageBarn Lagerhäuser
-    [x] StockPile Lagerplätze
-    [x] Market Märkte
-    [x] TradingPost Handelsposten
+[ ] ToolbarStorage Lagerraum und Handel
+    [ ] StorageBarn Lagerhäuser
+    [ ] StockPile Lagerplätze
+    [ ] Market Märkte
+    [ ] TradingPost Handelsposten
 
-[x] ToolbarServices Stadtgebäude
-    [x] Well Brunnen
-    [x] School Schulen
-    [x] Hospital Krankenhäuser
-    [x] TownHall Rathäuser
-    [x] Chapel Kapellen
-    [x] Cemetery Friedhöfe
+[ ] ToolbarServices Stadtgebäude
+    [ ] Well Brunnen
+    [ ] School Schulen
+    [ ] Hospital Krankenhäuser
+    [ ] TownHall Rathäuser
+    [ ] Chapel Kapellen
+    [ ] Cemetery Friedhöfe
 
-[x] ToolbarFood Nahrungsproduktion
-    [x] CropField Äcker
-    [x] Orchard Obstgärten
-    [x] Pasture Viehweiden
-    [x] FishingDock Fischerhütten
-    [x] HunterLodge Jagdhütte
-    [x] GathererHut Sammler
+[ ] ToolbarFood Nahrungsproduktion
+    [ ] CropField Äcker
+    [ ] Orchard Obstgärten
+    [ ] Pasture Viehweiden
+    [ ] FishingDock Fischerhütten
+    [ ] HunterLodge Jagdhütte
+    [ ] GathererHut Sammlerhütte
 
-[x] ToolbarProduction Ressourcenproduktion
-    [x] Woodcutter Holzhacker
-    [x] Forester Förster
-    [x] Herbalist Kräutersammler
-    [x] Blacksmith Schmied
-    [x] Tailor Schneidereien
-    [x] Tavern Wirtshäuser
-    [x] Mine Minen
-    [x] Quarry Steinbrüche
+[ ] ToolbarProduction Ressourcenproduktion
+    [ ] Woodcutter Holzhacker
+    [ ] Forester Förster
+    [ ] Herbalist Kräutersammler
+    [ ] Blacksmith Schmied
+    [ ] Tailor Schneidereien
+    [ ] Tavern Wirtshäuser
+    [ ] Mine Minen
+    [ ] Quarry Steinbrüche
 
-[x] ToolbarRemoval Ressourcenabbau und Gebäudeabriss
-    [x] RemoveStructure Gebäude abreißen
-    [x] RemoveResource Ressourcen abbauen
-    [x] RemoveTree Bäume fällen
-    [x] RemoveStone Stein abbauen
-    [x] RemoveIron Eisen abbauen
-    [x] RemoveRoad Wege entfernen
-    [x] RemoveCancel Abbau stoppen
+[ ] ToolbarRemoval Ressourcenabbau und Gebäudeabriss
+    [ ] RemoveStructure Gebäude abreißen
+    [ ] RemoveResource Ressourcen abbauen
+    [ ] RemoveTree Bäume fällen
+    [ ] RemoveStone Stein abbauen
+    [ ] RemoveIron Eisen abbauen
+    [ ] RemoveRoad Wege entfernen
+    [ ] RemoveCancel Abbau stoppen
 
-[x] Credits Mitwirkende
+[ ] Credits Mitwirkende
