- Changed "Ein #PLACEHOLDER# leidet unter Pilzbefall!" to more generic "Eine Agrarfläche (#PLACEHOLDER#) ist von einem Schädling befallen!" - Fixed wrong ""Sie die eine Viehherde aufteilen lassen, [...]" to "Sie können Viehherden aufteilen lassen, [...]" - Fixed wrong punctuation - Fixed some imperfect wordings

--- a/Misc/TODO.txt
+++ b/Misc/TODO.txt
@@ -8,8 +8,8 @@ Fenstergröße unpassend bei:
 - Viehweide
 
 Hilfe (Raw translation):
-[ ] Contents, Übersicht
-[ ] GettingStarted Grundlagen zum Spiel
+[x] Contents, Übersicht
+[x] GettingStarted Grundlagen zum Spiel
 [ ] Navigation Kamerasteuerung
 [ ] Toolbar Hauptleiste
 [ ] Citizen Siedler
