Improved translations and fixed errors.

--- a/Misc/TODO.txt
+++ b/Misc/TODO.txt
@@ -15,8 +15,8 @@ Hilfe (Raw translation):
 [x] Citizen Siedler
 [x] Resource Ressourcen
 [x] Buildings Gebäude
-[ ] Disaster Katastrophen
-[ ] ToolbarTime Spielgeschwindigkeit
+[x] Disaster Katastrophen
+[x] ToolbarTime Spielgeschwindigkeit
 
 [ ] ToolbarTools Toolfenster und Statistiken
     [ ] StatusBar Statusfenster
