--- a/Misc/TODO.txt
+++ b/Misc/TODO.txt
@@ -48,13 +48,13 @@ Hilfe (Raw translation):
     [x] DirtRoad Feldwege
     [x] StoneRoad Gepflasterte Straße
     [x] Bridge Brücken
-    [ ] Tunnel Tunnel
+    [x] Tunnel Tunnel
 
-[ ] ToolbarStorage Lagerraum und Handel
-    [ ] StorageBarn Lagerhäuser
-    [ ] StockPile Lagerplätze
-    [ ] Market Märkte
-    [ ] TradingPost Handelsposten
+[x] ToolbarStorage Lagerraum und Handel
+    [x] StorageBarn Lagerhäuser
+    [x] StockPile Lagerplätze
+    [x] Market Märkte
+    [x] TradingPost Handelsposten
 
 [ ] ToolbarServices Stadtgebäude
     [ ] Well Brunnen
@@ -91,4 +91,4 @@ Hilfe (Raw translation):
     [ ] RemoveRoad Wege entfernen
     [ ] RemoveCancel Abbau stoppen
 
-[ ] Credits Mitwirkende
+[x] Credits Mitwirkende
